# MedLinker

./: .env.example  .gitignore  API_CONTRACT.md  LICENSE  QUICK_START.md  README.md  Updated_long_and_lat_on_VF_Gh.csv  Virtue Foundation Ghana v0.3 - Sheet1.csv  long_and_lat_on_other_LowIncomeCountries.csv  pyproject.toml  requirements.txt  setup.py
examples/: facility_input_2.json  facility_input_3.json  facility_input_golden.json  facility_output_expected_golden.json
frontend/: .env  README.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Sidebar.jsx  TopNavbar.jsx
frontend/src/config/: index.js
frontend/src/sections/: Layout.jsx
frontend/src/services/: api.js
frontend/src/styles/: index.css
medlinker_ai/: __init__.py  aggregate.py  api.py  cli.py  config.py  constants.py  dataset.py  extract.py  graph.py  main.py  mlflow_utils.py  models.py  normalize.py  prompts.py  qa.py  trace.py  utils.py  verify.py
medlinker_ai/llm/: __init__.py  base.py  factory.py  fallback.py  gemini.py  openai.py
medlinker_ai/orchestrator/: __init__.py  langgraph_flow.py
medlinker_ai/rag/: __init__.py  faiss_store.py
outputs/: facilities.jsonl  regions.json  traces.jsonl
tests/: test_aggregate_offline.py  test_api_smoke.py  test_citation_verification.py  test_extract_offline.py  test_graph_orchestration.py  test_langgraph_optional.py  test_mlflow_integration.py  test_models_validate.py  test_qa_offline.py  test_rag_optional.py  test_trace_offline.py  test_verify_offline.py
(+14 files in other folders)
